<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/p_light"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingBottom="30dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/secondary"
            android:text="@string/agents_to_create"
            android:textSize="22sp"
            android:padding="30dp"/>
        <EditText
            android:id="@+id/user_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_a_number"
            android:layout_gravity="center"
            android:inputType="number"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/set_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:background="@drawable/s_button_selector"
                android:text="@string/set_text"
                android:textAllCaps="true"
                android:textColor="@color/textColorLight"
                app:backgroundTint="@null" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"/>
            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:text="@string/cancel_text"
                android:textAllCaps="true"
                android:textColor="@color/textColorLight"
                app:backgroundTint="@null"
                android:background="@drawable/s_button_selector"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>