<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/p_light">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="2dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/job_agent_is_set"
            android:textStyle="bold"
            android:textColor="@color/secondary"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TableLayout
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_height="wrap_content"
                android:stretchColumns="2"
                >
                <TableRow
                    android:paddingVertical="7dp">
                    <TextView
                        android:layout_column="1"
                        android:layout_span="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="start|center"
                        android:text="@string/job_field"
                        android:textStyle="bold"
                        android:textColor="@color/secondary"
                        android:textSize="15sp" />
                    <TextView
                        android:id="@+id/job_field_summery"
                        android:layout_span="1"
                        android:layout_column="2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end|center"
                        android:text="@string/job_field"
                        android:textColor="@color/secondary"
                        android:textSize="15sp" />
                </TableRow>
                <TableRow
                    android:paddingVertical="7dp">
                    <TextView
                        android:layout_column="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/location"
                        android:gravity="start|center"
                        android:textStyle="bold"
                        android:textColor="@color/secondary"
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/location_summery"
                        android:layout_span="1"
                        android:layout_column="2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end|center"
                        android:text="@string/location"
                        android:textColor="@color/secondary"
                        android:textSize="15sp" />
                </TableRow>
                <TableRow
                    android:paddingVertical="7dp">
                    <TextView
                        android:layout_column="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/starting_date"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/secondary"
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/date_summery"
                        android:layout_span="1"
                        android:layout_column="2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end|center"
                        android:text="@string/starting_date"
                        android:textColor="@color/secondary"
                        android:textSize="15sp" />
                </TableRow>
                <TableRow
                    android:id="@+id/mobility_row"
                    android:paddingVertical="7dp">
                    <TextView
                        android:layout_column="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/mobility"
                        android:gravity="start|center"
                        android:textStyle="bold"
                        android:textColor="@color/secondary"
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/mobility_summery"
                        android:layout_span="1"
                        android:layout_column="2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end|center"
                        android:text="@string/mobility"
                        android:textColor="@color/secondary"
                        android:textSize="15sp" />
                </TableRow>
                <TableRow
                    android:id="@+id/distance_row"
                    android:paddingVertical="7dp">
                    <TextView
                        android:layout_column="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/distance"
                        android:gravity="start|center"
                        android:textStyle="bold"
                        android:textColor="@color/secondary"
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/distance_summery"
                        android:layout_span="1"
                        android:layout_column="2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end|center"
                        android:text="@string/distance"
                        android:textColor="@color/secondary"
                        android:textSize="15sp" />
                </TableRow>
                <TableRow
                    android:paddingVertical="7dp">
                    <TextView
                        android:layout_column="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/job_type"
                        android:gravity="start|center"
                        android:textStyle="bold"
                        android:textColor="@color/secondary"
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/job_type_summery"
                        android:layout_span="1"
                        android:layout_column="2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end|center"
                        android:text="@string/job_type"
                        android:textColor="@color/secondary"
                        android:textSize="15sp" />
                </TableRow>


            </TableLayout>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="30dp">
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/ok_summery_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:background="@drawable/s_button_selector"
                android:text="@string/ok"
                android:textAllCaps="true"
                android:textColor="@color/textColorLight"
                app:backgroundTint="@null" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/change_summery_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:background="@drawable/s_button_selector"
                android:text="@string/change"
                android:textAllCaps="true"
                android:textColor="@color/textColorLight"
                app:backgroundTint="@null" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/cancel_summery_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:text="@string/cancel_text"
                android:textAllCaps="true"
                android:textColor="@color/textColorLight"
                app:backgroundTint="@null"
                android:background="@drawable/s_button_selector"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rate_the_agent"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/secondary"
            android:textSize="15sp"/>

        <RatingBar
            android:id="@+id/rating_bar_summery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:progressTint="@color/secondary" />
        <Button
            android:id="@+id/rate_summery_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="@drawable/s_button_selector"
            android:text="@string/rate"
            android:textAllCaps="true"
            android:textColor="@color/textColorLight"
            app:backgroundTint="@null" />



    </LinearLayout>


</RelativeLayout>